--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -120,7 +120,8 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%;
-  background-color: #2C3E50; }
+  /*background-color: #2C3E50; }*/
+  background-color: #2D3E50; }
 body {
   font-size: 2em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
@@ -429,10 +430,12 @@ there.
   display: block;
   /*line-height: 365px;*/
   line-height: 265px;
-  border-bottom: 30px solid rgb(41, 128, 185);
+  /*border-bottom: 30px solid rgb(41, 128, 185);*/
+  border-bottom: 30px solid rgb(27, 188, 155);
   font-weight: bold;
   text-align: center;
   color: white;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
   transition: border-bottom-color .1s ease-in;
   margin-bottom: 15px;
   background-position: 50%;
@@ -446,7 +449,8 @@ there.
 }
 
 .contentarea:hover {
-  border-bottom-color: rgb(52, 152, 219);
+  /*border-bottom-color: rgb(52, 152, 219);*/
+  border-bottom-color: rgb(35, 242, 200);
   color: white;
   box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);
 }
@@ -459,10 +463,12 @@ there.
   display: block;
   /*line-height: 365px;*/
   line-height: 265px;
-  border-bottom: 30px solid rgb(41, 128, 185);
+  /*border-bottom: 30px solid rgb(41, 128, 185);*/
+  border-bottom: 30px solid rgb(27, 188, 155);
   font-weight: bold;
   text-align: center;
   color: white;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
   transition: border-bottom-color .1s ease-in;
   margin-bottom: 15px;
   background-position: 50%;
@@ -476,7 +482,8 @@ there.
 }
 
 .gameimage:hover {
-  border-bottom-color: rgb(52, 152, 219);
+  /*border-bottom-color: rgb(52, 152, 219);*/
+  border-bottom-color: rgb(35, 242, 200);
   color: white;
   box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);
 }
@@ -538,7 +545,7 @@ dd {
 
 .intro a {
   text-decoration: none;
-  color: #E74C3C;
+  color: #FF5471;
 }
 
 .textlogo {
