--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -542,10 +542,8 @@ dd {
 }
 
 .textlogo {
-  width: 100%;
   text-align: center;
-  font-size: 300%;
-  white-space: nowrap;
+  font-size: 4vw;
 }
 
 .textlogo a {
