--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -121,7 +121,8 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%;
   /*background-color: #2C3E50; }*/
-  background-color: #2D3E50; }
+  /*background-color: #2D3E50; }*/
+  background-color: #ECF0F1; }
 body {
   font-size: 2em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
@@ -431,7 +432,7 @@ there.
   /*line-height: 365px;*/
   line-height: 265px;
   /*border-bottom: 30px solid rgb(41, 128, 185);*/
-  border-bottom: 30px solid rgb(27, 188, 155);
+  border-bottom: 30px solid rgb(44, 62, 80);
   font-weight: bold;
   text-align: center;
   color: white;
@@ -450,7 +451,7 @@ there.
 
 .contentarea:hover {
   /*border-bottom-color: rgb(52, 152, 219);*/
-  border-bottom-color: rgb(35, 242, 200);
+  border-bottom-color: rgb(53, 75, 97);
   color: white;
   box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);
 }
@@ -464,7 +465,7 @@ there.
   /*line-height: 365px;*/
   line-height: 265px;
   /*border-bottom: 30px solid rgb(41, 128, 185);*/
-  border-bottom: 30px solid rgb(27, 188, 155);
+  border-bottom: 30px solid rgb(44, 62, 80);
   font-weight: bold;
   text-align: center;
   color: white;
@@ -483,7 +484,7 @@ there.
 
 .gameimage:hover {
   /*border-bottom-color: rgb(52, 152, 219);*/
-  border-bottom-color: rgb(35, 242, 200);
+  border-bottom-color: rgb(53, 75, 97);
   color: white;
   box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);
 }
