--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -453,9 +453,9 @@ there.
 
 .contentarea:hover {
   /*border-bottom-color: rgb(52, 152, 219);*/
-  border-bottom-color: rgb(230, 230, 230);
+  border-bottom-color: rgb(48, 48, 48);
   color: white;
-  box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);
+  /*box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);*/
 }
 
 .gameimage {
