--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -433,16 +433,13 @@ there.
   line-height: 265px;
   /*border-bottom: 30px solid rgb(41, 128, 185);*/
   /*border-bottom: 30px solid rgb(74, 100, 145);*/
-  border: 1px solid white;
   border-bottom: 30px solid white;
-  font-weight: bold;
   text-align: center;
-  color: black;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 1);
+  color: white;
   transition: border-bottom-color .1s ease-in;
   margin-bottom: 15px;
   background-position: 50%;
-  box-shadow: none;
+  box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);;
 }
 
 .single-post .contentarea {
@@ -454,8 +451,8 @@ there.
 .contentarea:hover {
   /*border-bottom-color: rgb(52, 152, 219);*/
   border-bottom-color: rgb(230, 230, 230);
-  /*color: black;*/
-  box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);
+  color: white;
+  /*box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);*/
 }
 
 .gameimage {
