--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -455,6 +455,33 @@ there.
   /*box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);*/
 }
 
+.smallcontentarea {
+  /*border-radius: 1px;*/
+  height: 0px;
+  /*background-size: cover;*/
+  background-repeat: no-repeat;
+  text-decoration: none;
+  display: block;
+  /*line-height: 365px;*/
+  line-height: 30px;
+  /*border-bottom: 30px solid rgb(41, 128, 185);*/
+  /*border-bottom: 30px solid rgb(74, 100, 145);*/
+  border-bottom: 30px solid white;
+  text-align: center;
+  color: black;
+  transition: border-bottom-color .1s ease-in;
+  margin-bottom: 15px;
+  background-position: 50%;
+  box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);;
+}
+
+.smallcontentarea:hover {
+  /*border-bottom-color: rgb(52, 152, 219);*/
+  border-bottom-color: rgb(230, 230, 230);
+  color: black;
+  /*box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);*/
+}
+
 .gameimage {
   /*border-radius: 1px;*/
   height: 150px;
