--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -127,7 +127,7 @@ body {
   font-size: 2em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Alegreya Sans", "Ubuntu", "Raleway", "Source Sans Pro", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Cutive Mono", "Alegreya Sans", "Ubuntu", "Raleway", "Source Sans Pro", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif, monospace;
   color: #FFFFFF; }
 
 
