--- a/web/css/skeleton.css
+++ b/web/css/skeleton.css
@@ -443,7 +443,7 @@ there.
   margin-bottom: 15px;
 
   background-position: 50%;
-  /*background-size: cover;*/
+  background-size: cover;
   background-repeat: no-repeat;
 
   box-shadow: 0px 3px 12px -3px rgba(22, 21, 37, .6);
@@ -474,8 +474,7 @@ there.
   display: block;
   /*line-height: 365px;*/
   line-height: 30px;
-  /*border-bottom: 30px solid rgb(41, 128, 185);*/
-  /*border-bottom: 30px solid rgb(74, 100, 145);*/
+
   border-bottom: 30px solid #FF5B46;
   text-align: center;
   color: white;
